--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="card-white">
         <h1>Salut, moi c'est Nouhaila 🤎</h1>
-        <img src="img/moi.jpg" alt="Photo">
+        <img src="image/profile-picture.png" alt="Photo">
         <p>J'ai 18 ans (bientôt 19👀), j'habite à Paris et je suis étudiante en première année à l'EMLV. Tiens je te laisse découvrir mon école en cliquant sur ce bouton juste en bas !</p>
         <a href="https://www.emlv.fr/">Découvrir</a>
     </div>
